k8s/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: collector-api
    namespace: collector
    labels:
        app: collector-api
spec:
    replicas: 2
    selector:
        matchLabels:
            app: collector-api
    template:
        metadata:
            labels:
                app: collector-api
        spec:
            containers:
                - name: collector-api
                  image: rg.fr-par.scw.cloud/bloc-3-indiv/collector-api:cefed48bfa397845e5596898500ff3e28222af5e
                  imagePullPolicy: Always # Use local Minikube image
                  ports:
                      - containerPort: 8000
                  readinessProbe:
                      httpGet:
                          path: /docs
                          port: 8000
                      initialDelaySeconds: 10
                      periodSeconds: 5
                  livenessProbe:
                      httpGet:
                          path: /docs
                          port: 8000
                      initialDelaySeconds: 15
                      periodSeconds: 10
                  resources:
                      requests:
                          memory: "256Mi"
                          cpu: "500m"
                      limits:
                          memory: "512Mi"
                          cpu: "1000m"

---
apiVersion: v1
kind: Service
metadata:
    name: collector-api
    namespace: collector
spec:
    type: ClusterIP
    selector:
        app: collector-api
    ports:
        - port: 8000
          targetPort: 8000
